# llm-sleep-mechanism-18a0-codex

./: .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  requirements.txt  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/figures/: method_overview.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: dataset_summary.tex  design.tex  main_results.tex  pairwise_tests.tex  wildchat_audit.tex
papers/: README.md
papers/pages/: 2405.20947_or_bench_an_over_refusal_benchmark_for_large_language_models_manifest.txt  2406.11717_refusal_in_language_models_is_mediated_by_a_single_direction_manifest.txt  2410.03415_surgical_cheap_and_flexible_mitigating_false_refusal_in_language_model_manifest.txt  2507.21509_persona_vectors_monitoring_and_controlling_character_traits_in_languag_manifest.txt  (+5 more)
prompts/: synthetic_cases.jsonl
results/: analysis_summary.json  cost_estimate.json  dataset_validation.json  error_analysis_examples.md  experiment_config.json
src/: analyze_results.py  sleep_nudge_experiment.py
(+16 files in other folders)
