[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
  "arxiv",
  "datasets",
  "huggingface_hub",
  "pandas",
  "pypdf",
  "requests",
  "tzdata",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
